// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnionSchema denormalization denormalizes an array of multiple entities using a function to infer the schemaAttribute 1`] = `
Object {
  "id": 1,
  "type": "users",
  "username": "Janey",
}
`;

exports[`UnionSchema denormalization denormalizes an array of multiple entities using a function to infer the schemaAttribute 2`] = `
Object {
  "groupname": "People",
  "id": 2,
  "type": "groups",
}
`;

exports[`UnionSchema denormalization denormalizes an object using string schemaAttribute 1`] = `
Object {
  "id": 1,
  "type": "users",
  "username": "Janey",
}
`;

exports[`UnionSchema denormalization denormalizes an object using string schemaAttribute 2`] = `
Object {
  "groupname": "People",
  "id": 2,
  "type": "groups",
}
`;

exports[`UnionSchema denormalization returns the original value no schema is given 1`] = `
Object {
  "id": 1,
}
`;
